<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/credit"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/credit" />
        <item
            android:id="@+id/cafe"
            android:icon="@drawable/ic_local_florist_black_24dp"
            android:title="@string/cafe" />
    </group>

    <item android:title="@string/configuration">
        <menu>
            <item
                android:id="@+id/parametre"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/parametre" />
            <item
                android:id="@+id/apropos"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/apropos" />
            <item
                android:id="@+id/deconexion"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/deconexion" />
        </menu>
    </item>
</menu>