<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity2">

    <!-- Login progress -->
    <android.support.percent.PercentRelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/fragmentloginKenBurnsView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/plant2" />

        <View
            android:id="@+id/fragmentloginView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".7"
            android:background="#000000" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/form_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:addStatesFromChildren="false"
                    android:alwaysDrawnWithCache="false"
                    android:gravity="center"
                    android:padding="20sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/sign_in"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/connecte_vs"
                                android:textColor="@color/white"
                                android:textSize="38sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="5sp"
                                android:text="@string/have_account"
                                android:textColor="@color/psts_background_tab_pressed_ripple"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <RelativeLayout
                            android:id="@+id/center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="40sp">

                            <ImageView
                                android:id="@+id/mainImageView1"
                                android:layout_width="@dimen/login_holder_height"
                                android:layout_height="@dimen/login_holder_height"
                                android:layout_marginBottom="30dp"
                                android:src="@drawable/user_icon"
                                android:tint="#ffffff" />

                            <ImageView
                                android:id="@+id/mainImageView2"
                                android:layout_width="@dimen/login_holder_height"
                                android:layout_height="@dimen/login_holder_height"
                                android:layout_below="@id/mainImageView1"
                                android:layout_marginTop="20dp"
                                android:src="@drawable/password_icon"
                                android:tint="#ffffff" />

                            <EditText
                                android:id="@+id/phone_"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignBottom="@id/mainImageView1"
                                android:layout_alignTop="@id/mainImageView1"
                                android:layout_marginLeft="20dp"
                                android:layout_marginStart="20dp"
                                android:layout_toEndOf="@id/mainImageView1"
                                android:layout_toRightOf="@id/mainImageView1"
                                android:background="@null"
                                android:ems="10"
                                android:hint="@string/phone"
                                android:inputType="phone"
                                android:textColor="#FFFFFF"
                                android:textColorHint="@color/grey_600"
                                android:textSize="20sp"
                                android:typeface="serif" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_below="@id/phone_"
                                android:layout_marginTop="@dimen/login_horizontalline_spacing"
                                android:background="#FFFFFF" />

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignBottom="@id/mainImageView2"
                                android:layout_alignTop="@id/mainImageView2"
                                android:layout_marginLeft="20dp"
                                android:layout_marginStart="20dp"
                                android:layout_toEndOf="@id/mainImageView2"
                                android:layout_toRightOf="@id/mainImageView2"
                                android:background="@null"
                                android:ems="10"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:textColor="#FFFFFF"
                                android:textColorHint="@color/grey_600"
                                android:textSize="20sp"
                                android:typeface="serif" />

                            <View
                                android:id="@+id/vpwd"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_below="@id/password"
                                android:layout_marginTop="@dimen/login_horizontalline_spacing"
                                android:background="#FFFFFF" />
                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_below="@+id/center"
                            android:orientation="horizontal"
                            android:visibility="visible">

                            <Button
                                android:id="@+id/email_sign_in_button"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginTop="20dp"
                                android:layout_weight="1.0"
                                android:background="@drawable/rounded_button"
                                android:text="@string/conexion"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#FFFFFF" />

                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

                <!--<LinearLayout
                    android:id="@+id/registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_vertical"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:text="@string/have_account"
                        android:textColor="@color/psts_background_tab_pressed_ripple"
                        android:textSize="14sp" />
                </LinearLayout>-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/need_account"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#cccccc"
                        android:typeface="serif" />

                    <TextView
                        android:id="@+id/registration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/registrer_here"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:typeface="serif" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>


    </android.support.percent.PercentRelativeLayout>
</LinearLayout>